--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Mango = "5e49fdec-d473-4d14-b295-7bff2fcf1925"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
