more package revising to make it run

--- a/Project.toml
+++ b/Project.toml
@@ -3,3 +3,4 @@ Mango = "5e49fdec-d473-4d14-b295-7bff2fcf1925"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
