make one iteration of julia sim work, now to fix shutdown bug

--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,5 @@
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Mango = "5e49fdec-d473-4d14-b295-7bff2fcf1925"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
