update benchmarks to new Mango.jl API

--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Mango = "5e49fdec-d473-4d14-b295-7bff2fcf1925"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
